# tiny-link

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
docker/: Dockerfile  Dockerfile-db
migrations/tiny_link/: up.sql
migrations/users/: up.sql
schemas/: tiny_link.sql
src/: db.rs  error.rs  jwt.rs  main.rs  models.rs  parser.rs  response.rs  schema.rs  structs.rs
src/routes/: api.rs  auth.rs  mod.rs  ui.rs  user.rs
tests/: scraper.py  tests.rs
ui/: 404.html  index.html  index.js  style.css
