[package]
name = "tiny-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.3.1"
serde_json = "1.0.85"
serde_derive = "1.0.145"
serde = "1.0.144"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"