[package]
name = "tiny-link"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.3.25"
warp = "0.3.3"
tokio = { version = "1", features = ["full"] }
hyper = "^0.14"
log = "0.4.1"
url = "2.3.1"
serde_json = "1.0.85"
serde_derive = "1.0.145"
serde = "1.0.144"
diesel = { version = "2.0.0", features = ["postgres","r2d2"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
rand = "0.5.0"